--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El título del post</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blogpost</h1>
-    <p>Y este es el parrafo inicial</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante ¿? </h1>
+            <p>Y aqui es donde pondrémos el parrafo que tal vez expliquemos que estamos haciendo.</p>
+        </div>
+    </div>
 </body>
 </html>
