--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Blog, no se que.
+            <span id="tagline">Tu blog ASDASD</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante ¿? </h1>
