Agregamos el contenido adicional y una tipografia XD

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante ¿? </h1>
             <p>Y aqui es donde pondrémos el parrafo que tal vez expliquemos que estamos haciendo.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus dicta molestias ipsum! Est consequuntur, adipisci voluptates, molestias, soluta mollitia aperiam accusantium recusandae nam assumenda voluptatum labore in sequi ea.</p>
         </div>
     </div>
 </body>
