modifado la cabecera y el color del texto.

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Blog, no se que.
+            Blog, de cabecera.
             <span id="tagline">Tu blog ASDASD</span>
         </div>
         <div id="post">
