Agregue otro parrafo con dos lorem itsum

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,13 +10,14 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Blog, no se que.
+            Blog, Maestro.
             <span id="tagline">Tu blog ASDASD</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante ¿? </h1>
             <p>Y aqui es donde pondrémos el parrafo que tal vez expliquemos que estamos haciendo.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus dicta molestias ipsum! Est consequuntur, adipisci voluptates, molestias, soluta mollitia aperiam accusantium recusandae nam assumenda voluptatum labore in sequi ea.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit iure perspiciatis beatae laborum! Ex eaque at minima magni. Porro numquam ipsam ipsum mollitia perspiciatis quis provident impedit quod commodi aspernatur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, deserunt reprehenderit. Saepe, dolor nostrum neque iusto distinctio nemo optio magni! Cum, aut? Accusamus quas sunt quia, explicabo in enim itaque.</p>
         </div>
     </div>
 </body>
