--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Blog, de cabecera.
-            <span id="tagline">Tu blog ASDASD</span>
+            <span id="tagline">Tu blog ASDASD y más texto agregado desde el navegador.</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante ¿? </h1>
